optimizer/src/snapshots/qwik_optimizer__js_lib_interface__tests__test_example_11.snap
---
source: optimizer/src/js_lib_interface.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';
import {foo, bar as bbar} from "../state";
import * as dep2 from "dep2";
import dep3 from "dep3/something";

export const Header = component$(() => {
    return (
        <Header onClick={$((ev) => dep3(ev))}>
            {dep2.stuff()}{bbar()}
        </Header>
    );
});

export const App = component$(() => {
    return (
        <Header>{foo()}</Header>
    );
});

============================= test_example_11.tsx_App_component_Sjj92bgB1iA.js (ENTRY POINT)==

import { foo } from "../state";
import { Header } from "./test_example_11";
import { _jsxSorted } from "@qwik.dev/core";
export const App_component_Sjj92bgB1iA = () => {
	return _jsxSorted(Header, {}, {}, [foo()], 1, null);
};


None
/*
{
  "origin": "test_example_11.tsx",
  "name": "App_component_Sjj92bgB1iA",
  "entry": null,
  "displayName": "test_example_11.tsx_App_component",
  "hash": "Sjj92bgB1iA",
  "canonicalFilename": "test_example_11.tsx_App_component_Sjj92bgB1iA",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test_example_11.tsx_Header_component_Header_onClick_YvUbMIjc9kI.js (ENTRY POINT)==

import dep3 from "dep3/something";
export const Header_component_Header_onClick_YvUbMIjc9kI = (ev) => dep3(ev);


None
/*
{
  "origin": "test_example_11.tsx",
  "name": "Header_component_Header_onClick_YvUbMIjc9kI",
  "entry": null,
  "displayName": "test_example_11.tsx_Header_component_Header_onClick",
  "hash": "YvUbMIjc9kI",
  "canonicalFilename": "test_example_11.tsx_Header_component_Header_onClick_YvUbMIjc9kI",
  "path": "",
  "extension": "js",
  "parent": "Header_component_r6bL70De5aU",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test_example_11.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const q_Header_component_r6bL70De5aU = /* @__PURE__ */ qrl(() => import("./test_example_11.tsx_Header_component_r6bL70De5aU"), "Header_component_r6bL70De5aU");
const q_App_component_Sjj92bgB1iA = /* @__PURE__ */ qrl(() => import("./test_example_11.tsx_App_component_Sjj92bgB1iA"), "App_component_Sjj92bgB1iA");
export const Header = /* @__PURE__ */ componentQrl(q_Header_component_r6bL70De5aU);
export const App = /* @__PURE__ */ componentQrl(q_App_component_Sjj92bgB1iA);


None
============================= test_example_11.tsx_Header_component_r6bL70De5aU.js (ENTRY POINT)==

import { bar as bbar } from "../state";
import { Header } from "./test_example_11";
import { _jsxSorted, qrl } from "@qwik.dev/core";
import * as dep2 from "dep2";
const q_Header_component_Header_onClick_YvUbMIjc9kI = /* @__PURE__ */ qrl(() => import("./test_example_11.tsx_Header_component_Header_onClick_YvUbMIjc9kI"), "Header_component_Header_onClick_YvUbMIjc9kI");
export const Header_component_r6bL70De5aU = () => {
	return _jsxSorted(Header, { onClick: q_Header_component_Header_onClick_YvUbMIjc9kI }, {}, [dep2.stuff(), bbar()], 1, null);
};


None
/*
{
  "origin": "test_example_11.tsx",
  "name": "Header_component_r6bL70De5aU",
  "entry": null,
  "displayName": "test_example_11.tsx_Header_component",
  "hash": "r6bL70De5aU",
  "canonicalFilename": "test_example_11.tsx_Header_component_r6bL70De5aU",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
