optimizer/src/snapshots/qwik_optimizer__js_lib_interface__tests__test_example_2.snap
---
source: optimizer/src/js_lib_interface.rs
expression: output
---
==INPUT==

import { $, component, onRender } from '@builder.io/qwik';

export const renderHeader = $(() => {
    return (
        <div onClick={$((ctx) => console.log(ctx))}/>
    );
});
const renderHeader = component($(() => {
    console.log("mount");
    return render;
}));


============================= test_example_2.tsx_renderHeader_div_onClick_ZYP8O0EEogs.js (ENTRY POINT)==

export const renderHeader_div_onClick_ZYP8O0EEogs = (ctx) => console.log(ctx);


None
/*
{
  "origin": "test_example_2.tsx",
  "name": "renderHeader_div_onClick_ZYP8O0EEogs",
  "entry": null,
  "displayName": "test_example_2.tsx_renderHeader_div_onClick",
  "hash": "ZYP8O0EEogs",
  "canonicalFilename": "test_example_2.tsx_renderHeader_div_onClick_ZYP8O0EEogs",
  "path": "",
  "extension": "js",
  "parent": "renderHeader_hMRKEFfLPuk",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test_example_2.tsx ==

import { component, qrl } from "@qwik.dev/core";
const q_renderHeader_hMRKEFfLPuk = /* @__PURE__ */ qrl(() => import("./test_example_2.tsx_renderHeader_hMRKEFfLPuk"), "renderHeader_hMRKEFfLPuk");
export const renderHeader = q_renderHeader_hMRKEFfLPuk;
const renderHeader = component(qrl(() => import("./test_example_2.tsx_renderHeader_component_1YSz7kbpTeU"), "renderHeader_component_1YSz7kbpTeU"));


None
============================= test_example_2.tsx_renderHeader_component_1YSz7kbpTeU.js (ENTRY POINT)==

export const renderHeader_component_1YSz7kbpTeU = () => {
	console.log("mount");
	return render;
};


None
/*
{
  "origin": "test_example_2.tsx",
  "name": "renderHeader_component_1YSz7kbpTeU",
  "entry": null,
  "displayName": "test_example_2.tsx_renderHeader_component",
  "hash": "1YSz7kbpTeU",
  "canonicalFilename": "test_example_2.tsx_renderHeader_component_1YSz7kbpTeU",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test_example_2.tsx_renderHeader_hMRKEFfLPuk.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const q_renderHeader_div_onClick_ZYP8O0EEogs = /* @__PURE__ */ qrl(() => import("./test_example_2.tsx_renderHeader_div_onClick_ZYP8O0EEogs"), "renderHeader_div_onClick_ZYP8O0EEogs");
export const renderHeader_hMRKEFfLPuk = () => {
	return /* @__PURE__ */ _jsxSorted("div", { onClick: q_renderHeader_div_onClick_ZYP8O0EEogs }, {}, [], 1, null);
};


None
/*
{
  "origin": "test_example_2.tsx",
  "name": "renderHeader_hMRKEFfLPuk",
  "entry": null,
  "displayName": "test_example_2.tsx_renderHeader",
  "hash": "hMRKEFfLPuk",
  "canonicalFilename": "test_example_2.tsx_renderHeader_hMRKEFfLPuk",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
