optimizer/src/snapshots/qwik_optimizer__js_lib_interface__tests__test_example_3.snap
---
source: optimizer/src/js_lib_interface.rs
expression: output
---
==INPUT==

import { $, component$ } from '@builder.io/qwik';
export const App = () => {
    const Header = component$(() => {
        console.log("mount");
        return (
            <div onClick={$((ctx) => console.log(ctx))}/>
        );
    });
    return Header;
};


============================= test_example_3.tsx_App_Header_component_div_onClick_PHteWc0iLkc.js (ENTRY POINT)==

export const App_Header_component_div_onClick_PHteWc0iLkc = (ctx) => console.log(ctx);


None
/*
{
  "origin": "test_example_3.tsx",
  "name": "App_Header_component_div_onClick_PHteWc0iLkc",
  "entry": null,
  "displayName": "test_example_3.tsx_App_Header_component_div_onClick",
  "hash": "PHteWc0iLkc",
  "canonicalFilename": "test_example_3.tsx_App_Header_component_div_onClick_PHteWc0iLkc",
  "path": "",
  "extension": "js",
  "parent": "App_Header_component_sugl04P0hM8",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test_example_3.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const q_App_Header_component_sugl04P0hM8 = /* @__PURE__ */ qrl(() => import("./test_example_3.tsx_App_Header_component_sugl04P0hM8"), "App_Header_component_sugl04P0hM8");
export const App = () => {
	const Header = /* @__PURE__ */ componentQrl(q_App_Header_component_sugl04P0hM8);
	return Header;
};


None
============================= test_example_3.tsx_App_Header_component_sugl04P0hM8.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const q_App_Header_component_div_onClick_PHteWc0iLkc = /* @__PURE__ */ qrl(() => import("./test_example_3.tsx_App_Header_component_div_onClick_PHteWc0iLkc"), "App_Header_component_div_onClick_PHteWc0iLkc");
export const App_Header_component_sugl04P0hM8 = () => {
	console.log("mount");
	return /* @__PURE__ */ _jsxSorted("div", { onClick: q_App_Header_component_div_onClick_PHteWc0iLkc }, {}, [], 1, null);
};


None
/*
{
  "origin": "test_example_3.tsx",
  "name": "App_Header_component_sugl04P0hM8",
  "entry": null,
  "displayName": "test_example_3.tsx_App_Header_component",
  "hash": "sugl04P0hM8",
  "canonicalFilename": "test_example_3.tsx_App_Header_component_sugl04P0hM8",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
