optimizer/src/snapshots/qwik_optimizer__js_lib_interface__tests__test_example_5.snap
---
source: optimizer/src/js_lib_interface.rs
expression: output
---
==INPUT==

import { $, component$ } from '@builder.io/qwik';
export const Header = component$(() => {
    return (
        <>
            <div onClick={(ctx) => console.log("1")}/>
            <div onClick={$((ctx) => console.log("2"))}/>
        </>
    );
});
============================= test_example_5.tsx_Header_component_div_onClick_fw2SWFXEVDc.js (ENTRY POINT)==

export const Header_component_div_onClick_fw2SWFXEVDc = (ctx) => console.log("2");


None
/*
{
  "origin": "test_example_5.tsx",
  "name": "Header_component_div_onClick_fw2SWFXEVDc",
  "entry": null,
  "displayName": "test_example_5.tsx_Header_component_div_onClick",
  "hash": "fw2SWFXEVDc",
  "canonicalFilename": "test_example_5.tsx_Header_component_div_onClick_fw2SWFXEVDc",
  "path": "",
  "extension": "js",
  "parent": "Header_component_6fmck36BQEs",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test_example_5.tsx_Header_component_6fmck36BQEs.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const q_Header_component_div_onClick_fw2SWFXEVDc = /* @__PURE__ */ qrl(() => import("./test_example_5.tsx_Header_component_div_onClick_fw2SWFXEVDc"), "Header_component_div_onClick_fw2SWFXEVDc");
export const Header_component_6fmck36BQEs = () => {
	return [/* @__PURE__ */ _jsxSorted("div", { onClick: (ctx) => console.log("1") }, {}, [], 1, null), /* @__PURE__ */ _jsxSorted("div", { onClick: q_Header_component_div_onClick_fw2SWFXEVDc }, {}, [], 1, null)];
};


None
/*
{
  "origin": "test_example_5.tsx",
  "name": "Header_component_6fmck36BQEs",
  "entry": null,
  "displayName": "test_example_5.tsx_Header_component",
  "hash": "6fmck36BQEs",
  "canonicalFilename": "test_example_5.tsx_Header_component_6fmck36BQEs",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test_example_5.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const q_Header_component_6fmck36BQEs = /* @__PURE__ */ qrl(() => import("./test_example_5.tsx_Header_component_6fmck36BQEs"), "Header_component_6fmck36BQEs");
export const Header = /* @__PURE__ */ componentQrl(q_Header_component_6fmck36BQEs);


None
== DIAGNOSTICS ==

[]
