optimizer/src/snapshots/qwik_optimizer__js_lib_interface__tests__test_example_6.snap
---
source: optimizer/src/js_lib_interface.rs
expression: output
---
==INPUT==

import { $, component$ } from '@builder.io/qwik';
export const sym1 = $((ctx) => console.log("1"));
============================= test_example_6.tsx ==

import { qrl } from "@qwik.dev/core";
const q_sym1_aJjvXXEWJvU = /* @__PURE__ */ qrl(() => import("./test_example_6.tsx_sym1_aJjvXXEWJvU"), "sym1_aJjvXXEWJvU");
export const sym1 = q_sym1_aJjvXXEWJvU;


None
============================= test_example_6.tsx_sym1_aJjvXXEWJvU.js (ENTRY POINT)==

export const sym1_aJjvXXEWJvU = (ctx) => console.log("1");


None
/*
{
  "origin": "test_example_6.tsx",
  "name": "sym1_aJjvXXEWJvU",
  "entry": null,
  "displayName": "test_example_6.tsx_sym1",
  "hash": "aJjvXXEWJvU",
  "canonicalFilename": "test_example_6.tsx_sym1_aJjvXXEWJvU",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
