optimizer/src/snapshots/qwik_optimizer__js_lib_interface__tests__test_example_capture_imports.snap
---
source: optimizer/src/js_lib_interface.rs
expression: output
---
==INPUT==

import { component$, useStyles$ } from '@qwik.dev/core';
import css1 from './global.css';
import css2 from './style.css';
import css3 from './style.css';

export const App = component$(() => {
    useStyles$(`${css1}${css2}`);
    useStyles$(css3);
})
============================= test_example_capture_imports.jsx_App_component_useStyles_1_8FQjeZvEvS8.js (ENTRY POINT)==

import css3 from "./style.css";
import { qrl } from "@qwik.dev/core";
const q_App_component_useStyles_4DpomvGIbW4 = /* @__PURE__ */ qrl(() => import("./test_example_capture_imports.jsx_App_component_useStyles_4DpomvGIbW4"), "App_component_useStyles_4DpomvGIbW4");
export const App_component_useStyles_1_8FQjeZvEvS8 = css3;


None
/*
{
  "origin": "test_example_capture_imports.js",
  "name": "App_component_useStyles_1_8FQjeZvEvS8",
  "entry": null,
  "displayName": "test_example_capture_imports.jsx_App_component_useStyles_1",
  "hash": "8FQjeZvEvS8",
  "canonicalFilename": "test_example_capture_imports.jsx_App_component_useStyles_1_8FQjeZvEvS8",
  "path": "",
  "extension": "js",
  "parent": "App_component_duMjzEh70Eg",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test_example_capture_imports.jsx_App_component_duMjzEh70Eg.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const q_App_component_useStyles_1_8FQjeZvEvS8 = /* @__PURE__ */ qrl(() => import("./test_example_capture_imports.jsx_App_component_useStyles_1_8FQjeZvEvS8"), "App_component_useStyles_1_8FQjeZvEvS8");
export const App_component_duMjzEh70Eg = () => {
	q_App_component_useStyles_4DpomvGIbW4;
	q_App_component_useStyles_1_8FQjeZvEvS8;
};


None
/*
{
  "origin": "test_example_capture_imports.js",
  "name": "App_component_duMjzEh70Eg",
  "entry": null,
  "displayName": "test_example_capture_imports.jsx_App_component",
  "hash": "duMjzEh70Eg",
  "canonicalFilename": "test_example_capture_imports.jsx_App_component_duMjzEh70Eg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test_example_capture_imports.jsx_App_component_useStyles_4DpomvGIbW4.js (ENTRY POINT)==

import css1 from "./global.css";
import css2 from "./style.css";
export const App_component_useStyles_4DpomvGIbW4 = `${css1}${css2}`;


None
/*
{
  "origin": "test_example_capture_imports.js",
  "name": "App_component_useStyles_4DpomvGIbW4",
  "entry": null,
  "displayName": "test_example_capture_imports.jsx_App_component_useStyles",
  "hash": "4DpomvGIbW4",
  "canonicalFilename": "test_example_capture_imports.jsx_App_component_useStyles_4DpomvGIbW4",
  "path": "",
  "extension": "js",
  "parent": "App_component_duMjzEh70Eg",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test_example_capture_imports.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const q_App_component_duMjzEh70Eg = /* @__PURE__ */ qrl(() => import("./test_example_capture_imports.jsx_App_component_duMjzEh70Eg"), "App_component_duMjzEh70Eg");
export const App = /* @__PURE__ */ componentQrl(q_App_component_duMjzEh70Eg);


None
== DIAGNOSTICS ==

[]
